# fused-effects-control

./: .gitignore  LICENSE  README.md  fused-effects-control.cabal
src/Control/Effect/Control/: Instances.hs
test/: Main.hs
