name:                fused-effects-control
version:             0.1.0.0
synopsis:            Bridge fused-effects and monad-control
description:         Provides MonadTransControl and MonadBaseControl instances for fused-effects carriers.
homepage:            https://github.com/patrickt/fused-effects-control#readme
license:             BSD3
license-file:        LICENSE
author:              Patrick Thomson
maintainer:          patrickt@github.com
copyright:           Patrick Thomson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Control.Effect.Control.Instances
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , fused-effects >= 0.3 && < 1
                     , monad-control >= 1.0.2 && < 1.1
                     , transformers-base >= 0.4.5 && < 1

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base
                     , fused-effects
                     , fused-effects-control
                     , hspec       >= 2.4.1
